css/blogPage.css
/* CSS For The Boring Blog Blog Page */

body {
     background: rgb(11, 60, 61);
     background: linear-gradient(0deg, rgb(11, 60, 61) 66%, rgba(68,60,247,1) 94%, rgba(72,45,253,1) 100%);
}

#mainText {
     position: absolute;
     top: 23.5%;
     left: 22.5%;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

#blogHolder {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 20px;
     list-style-type: circle;
     position: absolute;
     top: 65%;
     left: 12.5%;
     color: white;
}

